edit help component

--- a/src/app/admin/pages/ayuda/ayuda.component.html
+++ b/src/app/admin/pages/ayuda/ayuda.component.html
@@ -20,7 +20,7 @@
             <div class="px-4">
                 <h2 class="text-uppercase lined lined-center">PLANTEAMIENTO DEL EJERCICIO DE PROYECTO DE INVERSIÓN</h2>
                 <p  class="text-muted mb-0 text-small">
-                    El sistema empleado para simular uno o más proyectos de inversión se basa en el libro "Simulación - Un enfoque práctico" de Raúl Coss Bu, tomado específicamente desde la página 78. Se han seguido todos los pasos detallados en el libro para asegurar la creación de un sistema altamente confiable. Puede acceder al libro haciendo clic en el botón a su derecha. No obstante, para una comprensión más completa del proceso de simulación, también es crucial entender los conceptos que se describen a continuación:
+                    El sistema empleado es para simular uno o más proyectos de inversión se basa en el libro "Simulación - Un enfoque práctico" de Raúl Coss Bu, tomado específicamente desde la página 78. Se han seguido todos los pasos detallados en el libro para asegurar la creación de un sistema altamente confiable. Puede acceder al libro haciendo clic en el botón a su derecha. No obstante, para una comprensión más completa del proceso de simulación, también es crucial entender los conceptos que se describen a continuación:
                 </p>
             </div>
             
